# RealEstateWebApp

./: README.md
realestateapp/: README.md  app.py  db.py  propertyfetch.py  pyproject.toml  replit_zip_error_log.txt  test.html
realestateapp/static/: carousel.js  style.css
realestateapp/templates/: adminpropertyview.html  formfetch.html  index.html  index2.html  index3.html  loginform.html  properties.html  propertyfilters.html  propertyform.html  updateproperties.html  userform.html
