[tool.poetry]
name = "repl-nix-real-estate-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_real_estate_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-scss = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
